--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "recharts": "^3.6.0",
+    "zod": "^3.25.76",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
